--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,12 @@
     <string name="app_name">PersonalFinanceTracker</string>
     <!--image content description-->
     <string name="cd_splash_str">Splash Screen Logo</string>
+    <string name="cd_tour_screen_one_str">Tour Screen Central Image</string>
 
     <!--first screen-->
     <string name="splash_description_str">Personal Finance Tracker</string>
+    <!--tour screen one-->
+    <string name="tour_screen_one_str">Are you Struggling Managing Your Expenses</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
