--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PersonalFinanceTracker</string>
+    <string name="app_name">Personal Finance Tracker</string>
     <!--image content description-->
     <string name="cd_splash_str">Splash Screen Logo</string>
     <string name="cd_tour_screen_one_str">Tour Screen Central Image</string>
@@ -9,5 +9,9 @@
     <!--tour screen one-->
     <string name="tour_screen_one_str">Are you Struggling Managing Your Expenses</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Menu Item Titles -->
+    <string name="text_earning">Earning</string>
+    <string name="text_home">Home</string>
+    <string name="text_expense">Expense</string>
+    <string name="text_report">Report</string>
 </resources>
