--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="cd_splash_str">Splash Screen Logo</string>
     <string name="cd_tour_screen_one_str">Tour Screen Central Image</string>
     <string name="cd_tour_screen_two_str">Tour Screen Central Image</string>
-
+    <string name="text_continue">Continue</string>
 
     <!--first screen-->
     <string name="splash_description_str">Personal Finance Tracker</string>
@@ -22,6 +22,6 @@
     <string name="text_home">Home</string>
     <string name="text_expense">Expense</string>
     <string name="text_report">Report</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_welcome">Welcome</string>
 </resources>
