--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="text_report">Report</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="text_welcome">Hey</string>
+    <string name="desc_profile_photo">Profile photo</string>
 </resources>
