--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,9 @@
     <string name="text_expense">Expense</string>
     <string name="text_report">Report</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
     <string name="text_welcome">Hey</string>
     <string name="desc_profile_photo">Profile photo</string>
+    <string name="text_earning_dialog_title">Add Your Source Earning</string>
+    <string name="text_expense_dialog_title">Add Your Source Expenses</string>
 </resources>
