--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,10 @@
     <string name="desc_profile_photo">Profile photo</string>
     <string name="text_earning_dialog_title">Add Your Source Earning</string>
     <string name="text_expense_dialog_title">Add Your Source Expenses</string>
+    <string name="text_coming_soon">Coming Soon</string>
+    <string name="desc_coming_soon_image">Coming soon image</string>
+    <string name="text_spent">Spent</string>
+    <string name="text_earned">Earned</string>
+    <string name="text_total_balance">Total Balance</string>
+    <string name="text_recent_transactions">Recent Transactions</string>
 </resources>
